<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/fl_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5" >

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_num0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:textColor="@color/black"
                android:drawableTop="@drawable/ic_launcher"
                android:gravity="center"
                android:text="@string/bb" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_num1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/black"
                android:drawableTop="@drawable/app_icon"
                android:gravity="center"
                android:text="@string/cc" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_num2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/black"
                android:gravity="center"
                android:drawableTop="@drawable/app_icon"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_num3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/black"
                android:drawableTop="@drawable/app_icon"
                android:gravity="center"
                android:text="@string/dd" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_num4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/app_icon"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/login" />
        </RadioGroup>
    </LinearLayout>
</FrameLayout>