<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F2FE" >

    <include
        android:id="@+id/item_title"
        layout="@layout/item_title"/>


    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_title" />

    <LinearLayout
        android:id="@+id/ll_button_item"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp42"
        android:layout_below="@id/tv"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp30"/>

        <Button
            android:id="@+id/bt_random"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp42"
            android:text="@string/bt_random_name" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp42"
            android:text="@string/bt_clear_name" />

        <EditText
            android:id="@+id/et"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/et_name" />

    </LinearLayout>
	<!--
		 去除边框 android:divider="#00000000"
		 去除原生点击事件的黄色背景android:listSelector="#00000000"
	-->
    <com.ajguan.library.EasyRefreshLayout
        android:id="@+id/easyRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_button_item"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="#00000000"
            android:divider="#00000000" />
    </com.ajguan.library.EasyRefreshLayout>


</RelativeLayout>